<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/shareMenu"
        android:title="@string/share" />
    <item
        android:id="@+id/settingsMenu"
        android:title="@string/settings" />
    <item
        android:id="@+id/local_florist"
        android:title="@string/next" />
    <item android:title="@string/info" />
    <item
        android:id="@+id/CloseMenu"
        android:title="@string/close" />
</menu>